gke/gke-expose-services/nginx/hello-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: hello
          servicePort: 8080
      - path: /v2
        backend:
          serviceName: hello2
          servicePort: 8080
